# xenora

./: CMakeLists.txt
include/: mainwindow.h
include/desktop/: desktopmanager.h
include/panel/: panel.h  taskbar.h
include/widgets/: systemtray.h
resources/: XenoraOS.qrc  resources.qrc  xenora.desktop  xenoraos.desktop
resources/style/: dark.qss  xenora-style.qss
src/: desktopicon.cpp  desktopicon.h  desktopmanager.cpp  desktopmanager.h  filemanager.cpp  filemanager.h  launcher.cpp  launcher.h  main.cpp  mainwindow.cpp  mainwindow.h  panel.cpp  panel.h  resources.qrc  systemsettings.cpp  systemsettings.h  systemtray.cpp  systemtray.h  taskbar.cpp  taskbar.h  xenorasystem.cpp  xenorasystem.h  xenorawindow.cpp  xenorawindow.h
src/desktop/: desktop.cpp  desktop.h  desktopiconview.cpp  desktopiconview.h  desktopmanager.cpp
src/desktopenv/: AppLauncher.cpp  AppLauncher.h  Desktop.cpp  Desktop.h  DesktopEnvironment.cpp  DesktopEnvironment.h  Panel.cpp  Panel.h  SettingsWindow.cpp  SettingsWindow.h  StyleManager.cpp  StyleManager.h  SystemTray.cpp  SystemTray.h  WindowManager.cpp  WindowManager.h
src/panel/: panel.cpp  panel.h  startmenu.cpp  startmenu.h  systray.cpp  systray.h  taskbar.cpp
src/settings/: settingsmanager.cpp  settingsmanager.h
src/widgets/: XenoraButton.cpp  XenoraButton.h  XenoraPanel.cpp  XenoraPanel.h  XenoraPopup.cpp  XenoraPopup.h  XenoraWindow.cpp  XenoraWindow.h  systemtray.cpp
src/windowmanager/: windowmanager.cpp  windowmanager.h
